--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -39,7 +39,7 @@ knitr::opts_chunk$set(class.source="Rchunk")
 ```
 
 <center>
-![](figures/NEOF.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:null"}
+![](figures/NEOF_rounded_corners.png){style="width:300px"}
 </center>
 
 # Overview
