--- a/long_read_qc/02-Intro.Rmd
+++ b/long_read_qc/02-Intro.Rmd
@@ -1,6 +1,6 @@
 # Data {#data}
 <center>
-![](figures/Play.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:null"}
+![](figures/Play.png){style="width:200px; border-radius:15px; border:5px solid white; background:null"}
 </center>
 
 ## The data
