--- a/long_read_qc/09-ONT_final_check.Rmd
+++ b/long_read_qc/09-ONT_final_check.Rmd
@@ -1,6 +1,6 @@
 # Final check {#ontcheckchap}
 <center>
-![](figures/finish.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:white"}
+![](figures/finish.png){style="width:200px; border-radius:15px; border:5px solid white; background:white"}
 </center>
 
 After trimming or filtering reads (quality control) it is always important to carry out a quality check. We will therefore run NanoPlot again.
@@ -29,7 +29,7 @@ firefox nanoplot/nanofiltq10minlen500_porechop/Acinetobacter_NanoPlot-report.htm
 
 ## ONT QC considerations
 <center>
-![](figures/considerations.png){style="width:150px"}
+![](figures/considerations.png){style="width:150px; background:white; border-radius:15px"}
 </center>
 
 Ultimately when quality checking we need to take into account how much data we are left with. We need to make sure we have a good amount of bases and reads for our application. However, we also want to make sure we aren\'t left with a lot of poor quality data.
@@ -42,7 +42,7 @@ In addition to the amount of bases, the length of reads is also important. One r
 
 ## NanoFilt Reattempts
 <center>
-![](figures/retry.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:white"}
+![](figures/retry.png){style="width:200px; border-radius:15px; border:5px solid white; background:white"}
 </center>
 
 Keeping all this in mind, let's say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000 total bases). Do we have this for the data that was porechopped and nanofiltered?
@@ -61,7 +61,7 @@ Tips:
 
 ## ONT Recap
 <center>
-![](figures/recap.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:white"}
+![](figures/recap.png){style="width:200px; border-radius:15px; border:5px solid white; background:white"}
 </center>
 
 That is the end of the ONT QC section.
